Add check isActivated, fetch sponsored transaction count, Copy tooltip

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,3 +12,14 @@
   border-style: solid;
   border-color: white transparent transparent transparent;
 }
+
+.copy-tooltip::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-width: 9px;
+  border-style: solid;
+  border-color: transparent transparent black transparent;
+}
