--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,17 @@
   border-color: white transparent transparent transparent;
 }
 
+.tooltip-text-black::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -10px;
+  border-width: 9px;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
+}
+
 .tooltip-text-up::after {
   content: "";
   position: absolute;
