--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,7 @@
   border-style: solid;
   border-color: transparent transparent black transparent;
 }
+
+.swiper-button-disabled {
+  visibility: hidden;
+}
