--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,19 @@
   border-style: solid;
   border-color: transparent transparent black transparent;
 }
+
+@keyframes slideUpFade {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.message-animate {
+  animation: slideUpFade 0.3s ease-out forwards;
+}
