--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,3 +75,19 @@
 .number-input[type=number] {
   -moz-appearance: textfield;
 }
+
+@keyframes slideUpFade {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.message-animate {
+  animation: slideUpFade 0.3s ease-out forwards;
+}
